fix: modal popup on mobile

--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -12,7 +12,7 @@
   }
 
   &__text {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 600;
     margin-bottom: 2rem;
   }
@@ -41,19 +41,3 @@
     }
   }
 }
-
-// .shape-outer {
-//   position: relative;
-//   top: 70%;
-//   z-index: 10;
-//   pointer-events: none;
-// }
-
-// .shape {
-//   height: max-content;
-//   width: 100%;
-//   display: block;
-//   transform-origin: 100% 0;
-//   fill: #000;
-//   will-change: transform;
-// }
